<resources>
    <string name="app_name">Chess</string>
    <string name="reset_button">Reset the game</string>
    <string name="listen_button">Listen</string>
    <string name="connect_button">Connect</string>
    <string name="register"><u>Register</u></string>
    <string name="login"><u>Login</u></string>
    <string name="default_web_client_id_" translatable="false">884571719139-t0smtan71fgva2qerhb01953i5v335du.apps.googleusercontent.com</string>
    <string name="chess_word">a b c d e f g h</string>
    <string name="chess_number">8 7 6 5 4 3 2 1</string>
    <string name="gv_online">https://giacomovenneri.pythonanywhere.com</string>
    <string name="jr_online">https://JaR.pythonanywhere.com</string>
</resources>