<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/light_brown">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.macc.android.chess.ChessView
            android:id="@+id/chess_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/reset_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="342dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:letterSpacing="1.07"
        android:text="@string/chess_word"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="10dp"
        android:layout_height="333dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="6dp"
        android:text="@string/chess_number"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="41dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

